(include_subdirs unqualified)

(library
  (name learninglib)
  (modules oracle incrementalexhoracle exhaustiveoracle pacoracle randomwalkoracle elttype lsharp mealy observationtree sul showableint)
  (modules_without_implementation sul oracle)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_deriving.make ppx_sexp_conv ppx_hash))
  (libraries core logs ocamlgraph)
)
