(include_subdirs unqualified)

(library
  (name ltscomparator)
  (modules cexfinder obs lts)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_deriving.make ppx_sexp_conv ppx_hash))
  (libraries sancus learninglib core core_unix.command_unix core_unix.filename_unix logs logs.fmt ocamlgraph shexp.process)
)

(env
  (dev
    (flags (:standard -warn-error -A))
  )
)
